# torso_extract

./: CMakeLists.txt  README.md
ipynb/: polyfit.py  smooth.ipynb  spline-fit.ipynb
librealsense/scripts/: linux_3.13.0-107.154.dsc
offline/: .body_extract.cpp.swp  .histogram_filter.cpp.swp  .histogram_filter.h.swp  .test_histogram.cpp.swp  .torso_offline.cpp.swp  CMakeLists.txt  body_extract.cpp  body_extract.h  global.h  global_def.cpp  global_def.h  histogram_filter.cpp  histogram_filter.h  load_image.cpp  lowpass.cpp  lowpass.h  polyfit.py  pt2img.cpp  pt2img.h  rs_r200_wrapper.cpp  smooth.h  smooth.hpp  spline-fit.ipynb  test_histogram.cpp  test_toPython.cpp  toPython.cpp  toPython.h  torso_offline.cpp  torso_offline_oneshot.cpp
offline/ipynb/: gt.csv  psudo_color.ipynb  spline-fit.ipynb
offline/ipynb/.ipynb_checkpoints/: psudo_color-checkpoint.ipynb  spline-fit-checkpoint.ipynb
read_serial_src/pub/: CMakeLists.txt
read_serial_src/pub/src/: .serial_com.cpp.swp  .test_serial.cpp.swp  CMakeLists.txt  serial_com.cpp  test_serial.cpp
scale/: CMakeLists.txt  estimate_scale.cpp  load_data.m  scale_display.m
src/: .body_orientation_serial.cpp.swp  CMakeLists.txt  body_extract.cpp  body_extract.h  body_orientation.cpp  body_orientation_m2.cpp  body_orientation_serial.cpp  body_orientation_serial_curve.cpp  global_def.h  global_def.hpp  histogram_filter.cpp  histogram_filter.h  pt2img.h  save_img.cpp  serial_com.cpp  smooth.h  test_serial.cpp  view_pointcloud.cpp
win_recv_serial/: Serial.cpp  Serial.h  coder.cpp  crc_generator.cpp  main - Copy.cpp  main.cpp
